# alphax_document_center

./: CHANGELOG.md  README.md  license.txt  pyproject.toml  release.sh
alphax_document_center/: api.py  hooks.py  jinja_methods.py  jobs.py  modules.txt  qrgen.py  render.py  utils.py
alphax_document_center/document_center/doctype/bulk_document_item/: bulk_document_item.json  bulk_document_item.py
alphax_document_center/document_center/doctype/bulk_document_job/: bulk_document_job.js  bulk_document_job.json  bulk_document_job.py
alphax_document_center/document_center/doctype/document_center_settings/: document_center_settings.json  document_center_settings.py
alphax_document_center/document_center/page/alphax_document_center/: alphax_document_center.js  alphax_document_center.json
alphax_document_center/document_center/workspace/document_center/: document_center.json
alphax_document_center/public/js/: adc_bulk_print.bundle.js
