[project]
name = "alphax_document_center"
authors = [
    { name = "Neotec Integrated Solution", email = "support@neotec.ai" }
]
description = "Bulk PDF, ZIP & Document Distribution Engine for Alpha-X ERP"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
